--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:alpine
-WORKDIR /docker/todo-app/back-end
-ENTRYPOINT [ "cat node_modules.tar.gz" ]
+WORKDIR /usr/src/app
+ADD node_modules.tar.gz .
+COPY . .
 EXPOSE 3001
-RUN npm install
+CMD npm start
