--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -2,4 +2,4 @@ FROM mjgargani/puppeteer:trybe1.0
 WORKDIR /usr/src/app
 ADD node_modules.tar.gz .
 COPY . .
-CMD ["npm" ,"test"]
+ENTRYPOINT ["npm" ,"test"]
