--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,22 @@
 version: "3"
 services:
   tests:
-    image: todotests
-    restart: always
+    image: todotests    
     depends_on:
-      - "back"
-      - "front"
+      - back
+      - front
     environment:
-      - FRONT_HOST=todobackend
+      - FRONT_HOST=front
   front:
-    image: todofrontend
-    restart: always
+    image: todofrontend    
     ports:
       - 3000:3000
     environment:
-      - REACT_APP_API_HOST=todobackend
+      - REACT_APP_API_HOST=back
+      - REACT_APP_API_HOST=3001
     depends_on:
-      - "back"
+      - back
   back:
-    image: todobackend
-    restart: always
+    image: todobackend    
     ports:
       - 3001:3001
