--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
 WORKDIR /usr/src/app
-ADD node_modules.tar.gz .
 COPY . .
+ADD ./node_modules.tar.gz ./
 EXPOSE 3000
 ENTRYPOINT ["npm" ,"start"]
