--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,19 +3,19 @@ services:
   todotests:
     image: todotests    
     depends_on:
-      - "back"
-      - "front"
+      - "todofront"
+      - "todoback"    
     environment:
-      - FRONT_HOST=front      
-  front:
-    image: todofrontend      
-    environment:
-      - REACT_APP_API_HOST=back      
+      - FRONT_HOST=todofront      
+  todofront:
+    image: todofrontend          
     depends_on:
-      - "back"
+      - "todoback"
     ports:
       - 3000:3000
-  back:
+    environment:
+      - REACT_APP_API_HOST=todoback 
+  todoback:
     image: todobackend  
     ports:
       - 3001:3001
