--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:alpine
+FROM node:14-alpine
 WORKDIR /usr/src/app
 EXPOSE 3000
-COPY . .
+COPY ./ ./
 ADD ./node_modules.tar.gz ./
-ENTRYPOINT ["npm" ,"start"]
+ENTRYPOINT ["npm", "start"]
