--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   todotests:
     image: todotests    
@@ -14,7 +14,8 @@ services:
     ports:
       - 3000:3000
     environment:
-      - REACT_APP_API_HOST=todoback 
+      - REACT_APP_API_HOST=todoback
+      - REACT_APP_API_PORT=3001
   todoback:
     image: todobackend  
     ports:
